[gd_scene load_steps=9 format=2]

[ext_resource path="res://enemy/white.shader" type="Shader" id=1]
[ext_resource path="res://assets/sprites/Enemies/Haniwa/Haniwa_spear.png" type="Texture" id=2]
[ext_resource path="res://assets/environment/E.png" type="Texture" id=3]
[ext_resource path="res://hud/dialog_text/dialog_box.tscn" type="PackedScene" id=4]
[ext_resource path="res://props/npc/guard_npc.gd" type="Script" id=5]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 1 )
shader_param/is_white = false

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24, 40 )

[node name="guard_npc" type="Node2D"]
script = ExtResource( 5 )

[node name="guard_npc" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( -16, -48 )
scale = Vector2( -1, 1 )
texture = ExtResource( 2 )
hframes = 6
vframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="guard_npc"]
autoplay = "idle"
anims/idle = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
visible = false
position = Vector2( 2, -52 )
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -2, 12 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -80 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 3 )

[node name="dialog_box" parent="." instance=ExtResource( 4 )]
margin_top = -360.0
margin_bottom = -56.0

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
